# crewai-project-0514edfb1cfb73d513fb

./: README.md  pyproject.toml
src/new_project/: crew.py  main.py
